Makefile.defs - got rid of clim/stipples and introduced tk-silica/xt-stipples
clim/accept-values.lisp
- made :cache-value in find-or-add-query for av fields depend on ptype 

clim/gadget-output.lisp
- temp fix in accept-values-string-field-changed-callback for openlook

clim/standard-types.lisp
- fix presentation type for form to properly inherit from expression
to handle auto-activate correctly

clim/stipples.lisp
- REMOVED (never used)

clim/text-formatting.lisp
- fixed a couple of bugs with filling-stream in stream-write-string
method

clim/translators.lisp
- fixed bug in find-presentation-translators-1 so that translators are
sorted by priority correctly

silica/classes.lisp
- changed initform for text-style to be nil rather than
*default-text-style* in basic-medium. This was causing text style
resources to be ignored.

sys/sysdcl.lisp
- removed clim/stipples and added tk-silica/xt-stipples

tk/xlib.lisp
- fixed up images for screen depths other than 8,1 and added support
made images take a :format arg (controls zpixmap/xypixmap/xybitmap)

tk-silica/ol-gadgets.lisp
- temp fix to make text-fields work

tk-silica/xm-gadgets.lisp
- label widgets set :recompute-size resource to nil
- bug fix for text-editor field and setf gadget-value

tk-silica/xt-graphics.lisp
- a whole bunch of changes/bug fixes. stippling now much improved and
simplified mechanism for ink table handling. foreground and background
and flipping ink are now treated like any other indirect inks with
their gcontexts kept in the ink table. tile-gcontext scrapped - now in
the port. luminisoty and opacity stuff merged into xt-stipples. bug
fixes for opacities.

tk-silica/xt-silica.lisp
- opacities stuff removed - moved to xt-stipples.
- added port-resize-frame

tk-silica/xt-stipples.lisp
- NEWFILE
- new opacity and luminosity stuff - 1 bit pixmaps on a per port basis

utils/packages.lisp
- export port-resize-frame from xm-silica

test/postscript-tests.lisp
- put in *hearts-tile* (grabbed it from clim/st

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.defs,v 1.1 93/03/01 14:26:08 cer Exp $
+# $fiHeader: Makefile.defs,v 1.2 93/03/01 15:59:11 cer Exp $
 #
 #  Makefile.defs for CLIM 2.0
 #
@@ -217,7 +217,6 @@ CLIM-STANDALONE-OBJS = clim/gestures.fasl \
                         clim/defresource.fasl \
                         clim/temp-strings.fasl \
                         clim/clim-defs.fasl \
-                        clim/stipples.fasl \
                         clim/stream-class-defs.fasl \
                         clim/interactive-defs.fasl \
                         clim/cursor.fasl \
@@ -313,6 +312,7 @@ OL-CLIM-OBJS = tk/ol-classes.fasl \
 
 MOTIF-CLIM-OBJS = tk-silica/pkg.fasl \
                    tk-silica/xt-silica.fasl \
+                   tk-silica/xt-stipples.fasl \
                    tk-silica/xm-silica.fasl \
                    tk-silica/xt-graphics.fasl \
                    tk-silica/xm-graphics.fasl \
@@ -330,6 +330,7 @@ MOTIF-CLIM-OBJS = tk-silica/pkg.fasl \
 
 OPENLOOK-CLIM-OBJS = tk-silica/pkg.fasl \
                       tk-silica/xt-silica.fasl \
+                      tk-silica/xt-stipples.fasl \
                       tk-silica/ol-silica.fasl \
                       tk-silica/xt-graphics.fasl \
                       tk-silica/ol-graphics.fasl \
@@ -395,7 +396,6 @@ ALL_SRC =	   utils/excl-verification.lisp \
                         clim/defresource.lisp \
                         clim/temp-strings.lisp \
                         clim/clim-defs.lisp \
-                        clim/stipples.lisp \
                         clim/stream-class-defs.lisp \
                         clim/interactive-defs.lisp \
                         clim/cursor.lisp \
@@ -483,6 +483,7 @@ ALL_SRC =	   utils/excl-verification.lisp \
               tk/make-widget.lisp \
 		   tk-silica/pkg.lisp \
                    tk-silica/xt-silica.lisp \
+                   tk-silica/xt-stipples.lisp \
                    tk-silica/xm-silica.lisp \
                    tk-silica/xt-graphics.lisp \
                    tk-silica/xm-graphics.lisp \
