made "make CL=foo trained-clim-xm" work. Seems that the CL was not being passed down!

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.defs,v 1.2 93/03/01 15:59:11 cer Exp $
+# $fiHeader: Makefile.defs,v 1.3 93/03/04 18:59:13 colin Exp $
 #
 #  Makefile.defs for CLIM 2.0
 #
@@ -515,7 +515,7 @@ make = make SPEED=${SPEED} SAFETY=${SAFETY} DEBUG=${DEBUG} \
 	LOAD_SOURCE_FILE_INFO=${LOAD_SOURCE_FILE_INFO} \
 	RECORD_SOURCE_FILE_INFO=${RECORD_SOURCE_FILE_INFO} \
 	LOAD_XREF_INFO=${LOAD_XREF_INFO} \
-	RECORD_XREF_INFO=${RECORD_XREF_INFO} \
+	RECORD_XREF_INFO=${RECORD_XREF_INFO} CL=${CL} \
 	CLIM=${CLIM} CLIMOL=${CLIMOL} CLIMXM=${CLIMXM} DUMP-CLIM=${DUMP-CLIM} \
 	COMPILE_PRINT=${COMPILE_PRINT}
 
