Makefile.generic		removed loads of climtoys since 			 	it is already loaded. clim/accept-values.lisp		Support Align-prompts for 			 	own-window nil dialogs 				When its t added updating-outpt 			 	to identify the prompt/value pair. clim/frames.lisp		Defaulted calling-frame to NIL. 			 	Alternative space-requirements 			 	work for allpanes.
clim/incremental-redisplay.lisp	Added some commented out diagnostics
clim/menus.lisp			Worked on
			 	menu-choose-from-drawer. Label
			 	is optional
clim/recording-protocol.lisp	In invoke-with-new-output-record
			 	find-child-output-record is
			 	called instead of
			 	find-child-output-record-1. This
			 	forces it to use output-record-old-children
demo/plot.lisp			Fixed dialog. replaced redisplay
			 	command now calls redisplay-frame-panes
hpgl/hpgl-tests.lisp		hpgl-tests now uses the
			 	postscript tests

misc/dev-load-1.lisp		Load in compiled version of test-driver/demos
misc/olsupport.c		Added support for ol_appl_delete_item
postscript/laserwriter-metrics.lisp	Reddid the font metrics
postscript/postscript-medium.lisp	Hacked the text style
			 	and pattern drawing stuff.
postscript/postscript-port.lisp		Hacked the text style
			 	and pattern drawing stuff.
postscript/sysdcl.lisp		Added read-afm.lisp
silica/db-box.lisp		redid the topdown fractional
			 	layout stuff.
silica/db-layout.lisp		Added the
			 	normalize-space-requirement
			 	stuff and hacked
			 	allocate-space-to-items to
			 	handle the fractional stuff better.
silica/event.lisp		distribute pointer events to
			 	grabbed sheet.
silica/gadgets.lisp		Hacked radio-boxes and
			 	check-boxes and added with-radio-box
test/postscript-tests.lisp	Now usable by the hpgl tests.
test/test-clim.lisp		Added some more tests
test/test-driver.lisp		error handling can now be
			 	completely disabled so you get
			 	into the debugger.

test/test.lisp		Added tests
tk/ol-funs.lisp		Added ol_appl_delete_item
tk/resources.lisp	Enhanced enumerated type to support
			 	explicit numb

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.2 93/03/01 15:59:14 cer Exp $
+# $fiHeader: Makefile.generic,v 1.3 93/03/04 18:59:20 colin Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -172,13 +172,11 @@ train	:	FORCE
 
 benchmark:
 	$(ECHO) "\
-	(load \"climtoys/test-clim.lisp\") \
 	(clim-user::benchmark-clim $(BENCHMARK_FILE)) \
 "  | $(CLIM) $(CLOPTS) -batch
 
 testps :
 	$(ECHO) "\
-	(load \"climtoys/test-clim.lisp\") \
 	(load \"test/postscript-tests.lisp\") \
 	(clim-user::run-postscript-tests :output :$(PSVIEW)) \
 "  | $(CLIM) $(CLOPTS) -batch
