--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.3 93/03/04 18:59:20 colin Exp $
+# $fiHeader: Makefile.generic,v 1.4 93/03/31 10:38:24 cer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -54,7 +54,7 @@ compile-ol:	$(OPENLOOK_OBJS) FORCE
 # Concatenation
 
 cat:	cat-xm cat-ol
-cat-g:	climg.fasl clim-debug.fasl climps.fasl climgg.fasl # clim1compat.fasl
+cat-g:	climg.fasl clim-debug.fasl climps.fasl climgg.fasl climhpgl.fasl # clim1compat.fasl
 cat-xm:	cat-g climxm.fasl clim-debugxm.fasl 
 cat-ol:	cat-g climol.fasl clim-debugol.fasl 
 
@@ -107,6 +107,10 @@ clim-debugol.fasl:	$(OL-DEBUG-OBJS)
 climps.fasl: 	$(POSTSCRIPT_CLIM)
 	$(CAT) $(POSTSCRIPT_CLIM) > $(TMP)/climps.fasl_`whoami`
 	$(MV) $(TMP)/climps.fasl_`whoami` climps.fasl
+
+climhpgl.fasl : $(HPGL_OBJS)
+	$(CAT) $(HPGL_OBJS) > $(TMP)/climhpgl.fasl_`whoami`
+	$(MV) $(TMP)/climhpgl.fasl_`whoami` climhpgl.fasl
 
 clim1compat.fasl : $(CLIM1COMPAT)
 	$(CAT) $(CLIM1COMPAT) > $(TMP)/clim1compat.fasl_`whoami`
@@ -178,9 +182,8 @@ benchmark:
 testps :
 	$(ECHO) "\
 	(load \"test/postscript-tests.lisp\") \
-	(clim-user::run-postscript-tests :output :$(PSVIEW)) \
+	(clim-user::run-postscript-tests :output $(PSVIEW)) \
 "  | $(CLIM) $(CLOPTS) -batch
-
 
 echo-train:
 	-$(ECHO) "$(TRAIN_LISP)"
