Changes to support motf 1.2
Makefile.generic	Added $(MOTIFXTRAOS) to enable specification of dlsym.o
Makefile.sun4		Point to 1.2, Makefile.sun4.motif-1.1.4 is the old version
clim/graph-formatting.lisp		Put in assert (grapher bug)
misc/xtsupport.c		Eliminated absolute pathname in include. Makefile specifies where to look
tk-silica/pkg.lisp		Exported ol/xm gadget classes
utils/packages.lisp		Exported gadget-foo functions

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.4 93/03/31 10:38:24 cer Exp $
+# $fiHeader: Makefile.generic,v 1.5 93/04/02 13:35:41 cer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -262,13 +262,13 @@ dcl	:
 	make dcl	
 
 clim-motif.o	: stub-motif.o stub-xt.o $(MOTIFLIB)
-	ld -r $(LDFLAGS) -o clim-motif.o stub-motif.o stub-xt.o $(MOTIFLIB)
+	ld -r $(LDFLAGS) -o clim-motif.o stub-motif.o stub-xt.o $(MOTIFXTRAOS) $(MOTIFLIB)
 
 clim-olit.o	: stub-olit.o stub-xt.o $(LIBXOL)
 	ld -r $(LDFLAGS) -o clim-olit.o stub-olit.o stub-xt.o $(LIBXOL)
 
 clim-motif_d.o	: stub-motif.o stub-xt.o $(MOTIFLIB_d)
-	ld -r  $(LDFLAGS) -o clim-motif_d.o stub-motif.o stub-xt.o $(MOTIFLIB_d)
+	ld -r  $(LDFLAGS) -o clim-motif_d.o stub-motif.o stub-xt.o $(MOTIFXTRAOS) $(MOTIFLIB_d)
 
 clim-olit_d.o	: stub-olit.o  stub-xt.o $(LIBXOL_d)
 	ld -r $(LDFLAGS) -o clim-olit_d.o stub-olit.o stub-xt.o $(LIBXOL_d)
@@ -295,7 +295,7 @@ xlibsupport.o	: xlib/xlibsupport.c
 
 
 xtsupport.o: misc/xtsupport.c
-	$(CC) -c $(CFLAGS) -o xtsupport.o misc/xtsupport.c
+	$(CC) -c $(CFLAGS) $(XTSUPPORTINCLUDES) -o xtsupport.o misc/xtsupport.c
 
 MyDrawingA.o: misc/MyDrawingA.c
 	$(CC) -c $(CFLAGS) -o MyDrawingA.o misc/MyDrawingA.c
