--- a/Makefile.sun4
+++ b/Makefile.sun4
@@ -1,14 +1,18 @@
-# $fiHeader: Makefile,v 1.74 93/02/10 10:04:04 cer Exp $
+# $fiHeader: Makefile.sun4,v 1.1 93/03/01 14:26:12 cer Exp $
 #
 #  Makefile.sun4 for CLIM 2.0
 #
 
 include Makefile.defs
 
-MOTIFLIB=/x11/R4/sun4-lib/libXm$(DEBUGLIB).a
-MOTIFLIB_d=/x11/R4/sun4-lib/libXm_d.a
-XLIB= /x11/R4/sun4-lib/libX11$(DEBUGLIB).a 
-XTLIB=/x11/R4/sun4-lib/libXt$(DEBUGLIB).a
-XINCLUDES=-I/x11/motif-1.1/lib
+MOTIFLIB=/3rd/motif-1.2.1/usr/lib/libXm$(DEBUGLIB).a
+#MOTIFLIB_d=/3rd/motif-1.2.1/usr/lib/libXm_d.a
+MOTIFLIB_d=/3rd/motif-1.2.1/usr/lib/libXm.a
+XLIB= /3rd/motif-1.2.1/usr/lib/libX11$(DEBUGLIB).a 
+XTLIB=/3rd/motif-1.2.1/usr/lib/libXt$(DEBUGLIB).a
+XINCLUDES=-I/3rd/motif-1.2.1/usr/include
+XTSUPPORTINCLUDES=-I/x11/R5/src/mit/lib/Xt
+# Do we really need this. Why is it referenced?
+MOTIFXTRAOS=/3rd/motif-1.2.1/usr/lib/Motif/Sun/dlsym.o
 
 include Makefile.generic
