Makefile.generic 	OLIT to use difference X libraries Makefile.sun4		OLIT to use difference X libraries Makefile.sun4.motif-1.1.4	OLIT to use difference X libraries clim/accept-values.lisp		graphical accept-values-command-buttons clim/graph-formatting.lisp	Removed assertion clim/graphics-recording.lisp		Comment clim/incremental-redisplay.lisp		Nothing changed clim/interactive-defs.lisp		Moved methods to interactive-protocol.lisp clim/interactive-protocol.lisp		Added methods from interactive-defs.lisp. They are specialized 					on the stream clim/recording-protocol.lisp		Fixed incremental redisplay 					problem involve :parent 					argument. We now look in the 					parent for old-children climtoys/ib.lisp			Implemented multiple selections. 					hbox/vbox adopt all selected widgets as their children 					removed crap climtoys/pi.lisp			presentation-inspect calls winspect on presentation demo/bitmap-editor.lisp			Nothing demo/browser.lisp			Redid browser layout. Removed option not to merge duplicates 					since that breaks redisplay. Removed call to 					redisplay-frame-pane inside the avv display function since that 					interacts with the original stream problem to create empty 					output records. hpgl/hpgl-port.lisp			Combined duplicated initialize-instance methods test/test-suite.lisp			Nothing tk/xlib.lisp				Fixed compose-status typo tk-silica/xm-gadgets.lisp		Correct computation of pixmap label size tk-silica/xm-silica.lisp		Put focus policy back to pointer tk-silica/xt-graphics.lisp		Sped up rotated text by caching rotated strings tk-silica/xt-silica.lisp		Added rotated string cache to xt-port

--- a/Makefile.sun4
+++ b/Makefile.sun4
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.sun4,v 1.1 93/03/01 14:26:12 cer Exp $
+# $fiHeader: Makefile.sun4,v 1.2 93/04/02 18:40:42 cer Exp $
 #
 #  Makefile.sun4 for CLIM 2.0
 #
@@ -14,5 +14,8 @@ XINCLUDES=-I/3rd/motif-1.2.1/usr/include
 XTSUPPORTINCLUDES=-I/x11/R5/src/mit/lib/Xt
 # Do we really need this. Why is it referenced?
 MOTIFXTRAOS=/3rd/motif-1.2.1/usr/lib/Motif/Sun/dlsym.o
+
+OLXLIB= /vapor/x11/olit-3.0/lib/libX11.a
+OLXTLIB=/vapor/x11/olit-3.0/lib/libXt.a
 
 include Makefile.generic
