Makefile.generic 	OLIT to use difference X libraries Makefile.sun4		OLIT to use difference X libraries Makefile.sun4.motif-1.1.4	OLIT to use difference X libraries clim/accept-values.lisp		graphical accept-values-command-buttons clim/graph-formatting.lisp	Removed assertion clim/graphics-recording.lisp		Comment clim/incremental-redisplay.lisp		Nothing changed clim/interactive-defs.lisp		Moved methods to interactive-protocol.lisp clim/interactive-protocol.lisp		Added methods from interactive-defs.lisp. They are specialized 					on the stream clim/recording-protocol.lisp		Fixed incremental redisplay 					problem involve :parent 					argument. We now look in the 					parent for old-children climtoys/ib.lisp			Implemented multiple selections. 					hbox/vbox adopt all selected widgets as their children 					removed crap climtoys/pi.lisp			presentation-inspect calls winspect on presentation demo/bitmap-editor.lisp			Nothing demo/browser.lisp			Redid browser layout. Removed option not to merge duplicates 					since that breaks redisplay. Removed call to 					redisplay-frame-pane inside the avv display function since that 					interacts with the original stream problem to create empty 					output records. hpgl/hpgl-port.lisp			Combined duplicated initialize-instance methods test/test-suite.lisp			Nothing tk/xlib.lisp				Fixed compose-status typo tk-silica/xm-gadgets.lisp		Correct computation of pixmap label size tk-silica/xm-silica.lisp		Put focus policy back to pointer tk-silica/xt-graphics.lisp		Sped up rotated text by caching rotated strings tk-silica/xt-silica.lisp		Added rotated string cache to xt-port

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.5 93/04/02 13:35:41 cer Exp $
+# $fiHeader: Makefile.generic,v 1.6 93/04/02 18:40:38 cer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -38,8 +38,8 @@ compile-ol:	$(OPENLOOK_OBJS) FORCE
 	  (lambda () \
 	    (setq *compile-print* $(COMPILE_PRINT)) \
 	    (setf excl:*load-xref-info* $(LOAD_XREF_INFO)) \
-	    (setq sys::*libxt-pathname* \"$(XTLIB)\") \
-	    (setq sys::*libx11-pathname* \"$(XLIB)\") \
+	    (setq sys::*libxt-pathname* \"$(OLXTLIB)\") \
+	    (setq sys::*libx11-pathname* \"$(OLXLIB)\") \
 	    (setq sys::*clim-olit-pathname* \"clim-olit$(DEBUGLIB).o\") \
 	    (setq *ignore-package-name-case* t) \
 	    (set-case-mode :case-insensitive-lower) \
@@ -146,8 +146,8 @@ clim-xm:	FORCE $(MOTIF_OBJS)
 clim-ol:	FORCE $(OPENLOOK_OBJS)
 	-$(RM) -f $(CLIMOL)
 	$(ECHO) " \
-		(setq sys::*libxt-pathname* \"$(XTLIB)\") \
-		(setq sys::*libx11-pathname* \"$(XLIB)\") \
+		(setq sys::*libxt-pathname* \"$(OLXTLIB)\") \
+		(setq sys::*libx11-pathname* \"$(OLXLIB)\") \
 	        (setq sys::*clim-olit-pathname* \"clim-olit$(DEBUGLIB).o\") \
 		(load \"misc/dev-load-1.lisp\") \
 		(load-it 'openlook-clim) \
