Makefile.generic - added stub-*.c files to list of files to be rm'd with make clean
clim/frames.lisp
- :command-menu now back to old style clim1 pane (clim2rfe230)
- :menu-bar produces toolkit menu bar panes (clim2rfe230)
- fixed bug in find-applicable-translators-for-documentation
  (clim2bug409) 

silica/gadgets.lisp
- menu-bar now inherits from oriented-gadget-mixin (clim2rfe230)

test/test-suite.lisp
- added tests for clipping with rectangle-sets

tk/gcontext.lisp
- (setf gcontext-clip-mask) can now take a list of rectangles

tk-silica/xm-frames.lisp
- frame-manger-contruct-menu now handles row-wise, n-columns and
  n-rows (clim2bug401)

tk-silica/xt-graphics.lisp
- a bunch of changes to make rectangle sets work as clipping regions
  (clim2bug346) 
- pattern and tile decoding unified. transparent patterns are now
  limited to two colors (as tiles used to be).

tk-silica/xt-silica.lisp
- fixed up minor problem with hp's scalable fonts.

utils/region-arithmetic.lisp
- removed bounding-rectangle from list of superclasses of
  standard-rectangle-set (list includes region-set which itself
  inherits from bounding-rectangle)

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.6 93/04/02 18:40:38 cer Exp $
+# $fiHeader: Makefile.generic,v 1.7 93/04/07 09:06:22 cer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -196,7 +196,8 @@ cleanobjs:
 
 clean:
 	find $(DIRS) -name "*.fasl" -print | xargs rm -f ; rm -f $(CLIMFASLS) \
-	  $(CLIMOBJS) stub-motif.o stub-olit.o slim slim-small
+	  $(CLIMOBJS) stub-motif.o stub-olit.o stub-xt.o stub-x.o \
+	  stub-motif.c stub-olit.c stub-xt.c stub-x.c slim slim-small
 
 
 cheapclean:
