Makefile.defs		Modified training to compile test-suite first 			Added silica/db-label.lisp clim/accept-values.lisp		changing-space-requirements fix clim/graph-formatting.lisp	added find-child-output-record method that searches all of the old children
clim/menus.lisp		Fixed for :label to menus
climtoys/coverage.lisp	Sorted files by coverage
climtoys/ib.lisp	Reworked architecture introducing blanket-viewer class.
demo/browser.lisp	Display snapshots in interactor rather on graph
misc/train.lisp		Training to record failed tests in port specific files. Compiles test-suite.lisp
silica/db-border.lisp 	Moved code into silica/db-label.lisp
silica/db-layout.lisp 	invoke-with-changing-space-requirements layout argument defaults to t
silica/gadgets.lisp	Moved code into silica/db-label.lisp
silica/mirror.lisp  	added always-propagate-region-changes-p so
			that we can force mirror resizes to change
			sheet. Forces the rest of the tree to be laid out
sys/sysdcl.lisp		Added db-label.lisp
test/test-driver.lisp	Added *default-input-state-timeout* test
			reporting to send output to file
test/test-suite.lisp	Minor cosmetic changes.
test/test.lisp		made window bigger
tk/resources.lisp	Fixed wrap mode
tk-silica/ol-gadgets.lisp		openlook-frame-pane now
			ignores bacground argument. made use of
			openlook-labelled-gadget. fixed orrientation
			problem in radio-box. 
tk-silica/xm-frames.lisp	Moved update-frame-settings and
			frame-manager-note-pretty-name-changed  to xt-frames
tk-silica/xm-gadgets.lisp		Added
			always-propagate-region-changes-p method
tk-silica/xm-silica.lisp		REmoved dialog shell
			change-widget-geometry method
tk-silica/xt-frames.lisp		Moved update-frame-settings and
			frame-manager-note-pretty-name-changed  to xt-frames
tk-silica/xt-silica.lisp Only turn on backing store if the server is safe

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.defs,v 1.4 93/03/15 08:27:09 cer Exp $
+# $fiHeader: Makefile.defs,v 1.6 93/04/16 09:26:13 layer Exp $
 #
 #  Makefile.defs for CLIM 2.0
 #
@@ -22,12 +22,14 @@ TRAIN_TIMES=2
 # view, file, print
 PSVIEW=:file
 HPGLVIEW=:file
+TRAIN_COMPILE=t
 
 FRAME_TESTS=t
 
 TRAIN_LISP= \
 	(load \"misc/train.lisp\") \
-	(train-clim :frame-tests $(FRAME_TESTS) :train-times $(TRAIN_TIMES) :psview $(PSVIEW) :hpglview $(HPGLVIEW)) \
+	(train-clim :frame-tests $(FRAME_TESTS) :train-times $(TRAIN_TIMES)\
+		:compile $(TRAIN_COMPILE) :psview $(PSVIEW) :hpglview $(HPGLVIEW)) \
 	(exit 0)
 
 TRAIN_TEXT = \
@@ -270,7 +272,7 @@ CLIM-STANDALONE-OBJS = clim/gestures.fasl \
                         clim/stream-trampolines.fasl
 
 GENERIC-GADGETS = clim/db-menu.fasl clim/db-list.fasl clim/db-text.fasl silica/db-button.fasl \
-	    silica/db-slider.fasl silica/scroll-pane.fasl
+	    silica/db-slider.fasl silica/scroll-pane.fasl silica/db-label.fasl
 
 XLIB-CLIM-OBJS = xlib/pkg.fasl xlib/load-xlib.fasl
 
@@ -388,6 +390,7 @@ ALL_SRC =	   utils/excl-verification.lisp \
                     silica/db-border.lisp \
                     silica/db-scroll.lisp \
                     silica/db-button.lisp \
+		    silica/db-label.lisp \
                     silica/db-slider.lisp \
 			clim/gestures.lisp \
                         clim/defprotocol.lisp \
