--- a/Makefile.cobjs
+++ b/Makefile.cobjs
@@ -1,4 +1,4 @@
-# $fiHeader: $
+# $fiHeader: Makefile.cobjs,v 1.1 93/04/16 09:26:08 layer Exp $
 #
 #  Makefile.cobj for CLIM 2.0, containing non-svr4 C rules
 #
@@ -31,3 +31,17 @@ stub-x.c	:  $(UNDEFS) $(OL_UNDEFS) misc/make-stub-file
 
 stub-xt.c	:  $(XT_UNDEFS) misc/make-stub-file
 	misc/make-stub-file "void ___lisp_load_xt_stub ()"  $(XT_UNDEFS)  > stub-xt.c 
+
+xlibsupport.o	: xlib/xlibsupport.c 
+	$(CC) -c $(CFLAGS) -o xlibsupport.o xlib/xlibsupport.c
+
+xtsupport.o: misc/xtsupport.c
+	$(CC) -c $(CFLAGS) $(XTSUPPORTINCLUDES) -o xtsupport.o \
+		misc/xtsupport.c
+
+MyDrawingA.o: misc/MyDrawingA.c
+	$(CC) -c $(CFLAGS) -o MyDrawingA.o misc/MyDrawingA.c
+
+olsupport.o: misc/olsupport.c
+	$(CC) -c $(CFLAGS) -o olsupport.o misc/olsupport.c
+
