.cvsignore		Ignore extra files Makefile.defs		Added hpgl to directory list, Uncommented malloclib stuff clim/command.lisp	Implemented ensure-command-in-command-table and :after :replace clim/incremental-redisplay.lisp	Setf all-new slot of record to NIL after its used climtoys/ib.lisp	Usual hacking demo/graphics-editor.lisp	made command-table menu  use :divider tk/make-classes.lisp		Map list and scrolling-list to ol-list tk/xm-font-list.lisp		Motif 1.2 font list code. tk/xm-funs.lisp			Motif 1.2 font list code. tk-silica/ol-gadgets.lisp	command menu updating and :divider stuff. tk-silica/ol-silica.lisp	ensure widget has a window tk-silica/xm-frames.lisp	command table menu :divider stuff. utils/packages.lisp		Export stream-redisplaying-p

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.defs,v 1.6 93/04/16 09:26:13 layer Exp $
+# $fiHeader: Makefile.defs,v 1.7 93/04/16 09:44:41 cer Exp $
 #
 #  Makefile.defs for CLIM 2.0
 #
@@ -68,7 +68,7 @@ PREMALLOCS = '-m 401408'
 CLIM-SMALL	= ./slim-small
 
 PUBDIRS	= sys utils silica clim demo test genera clx pre-silica postscript compatibility
-DIRS0	=  tk tk-silica misc cloe climtoys
+DIRS0	=  tk tk-silica misc cloe climtoys hpgl
 DIRS	= $(PUBDIRS) xlib $(DIRS0)
 CHEAP_CLEAN	= $(PUBDIRS) $(DIRS0)
 
@@ -147,17 +147,18 @@ COMPOSEROBJS= /scm/4.1/sparc/src/code/excldep.o /scm/4.1/sparc/src/code/socket.o
 	      /scm/4.1/sparc/src/code/io.o /scm/4.1/sparc/src/code/exclio.o \
 	      /scm/4.1/sparc/src/code/RunStatus.o
 
-MALLOCOBJS =
-# Uncomment to enable malloc debugging.
-#
-# MALLOCOBJS= $(PWD)/malloclib/malloc.o $(PWD)/malloclib/free.o $(PWD)/malloclib/realloc.o \
-#	    $(PWD)/malloclib/calloc.o $(PWD)/malloclib/string.o \
-#	    $(PWD)/malloclib/malloc_chk.o $(PWD)/malloclib/malloc_chn.o \
-#	    $(PWD)/malloclib/memory.o $(PWD)/malloclib/tostring.o \
-#	    $(PWD)/malloclib/m_perror.o $(PWD)/malloclib/m_init.o \
-#	    $(PWD)/malloclib/mallopt.o $(PWD)/malloclib/dump.o $(PWD)/malloclib/leak.o
 
-#
+
+ALLMALLOCOBJS= $(PWD)/malloclib/malloc.o $(PWD)/malloclib/free.o $(PWD)/malloclib/realloc.o \
+	    $(PWD)/malloclib/calloc.o $(PWD)/malloclib/string.o \
+	    $(PWD)/malloclib/malloc_chk.o $(PWD)/malloclib/malloc_chn.o \
+	    $(PWD)/malloclib/memory.o $(PWD)/malloclib/tostring.o \
+	    $(PWD)/malloclib/m_perror.o $(PWD)/malloclib/m_init.o \
+	    $(PWD)/malloclib/mallopt.o $(PWD)/malloclib/dump.o $(PWD)/malloclib/leak.o
+# Uncomment to enable malloc debugging.
+#MALLOCOBJS =ALLMALLOCOBJS=
+MALLOCOBJS =
+
 # "Compile time objects" -- these go into clim-debug.fasl
 #
 DEBUG-OBJS = xlib/ffi.fasl xlib/xlib-defs.fasl xlib/xlib-funs.fasl \
