Makefile.generic		Added silly rule to ls -s fasls clim/accept-values.lisp		Added :echo NIL to presentation events clim/activities.lisp		Indentation clim/db-stream.lisp		Made clim-stream-sheet point back to input-editing-stream clim/frames.lisp		Made the frame-queue command echo and add to history clim/gadget-output.lisp		Header changed clim/input-defs.lisp		Added valid slot to pointer. clim/input-editor-commands.lisp		Comment clim/input-protocol.lisp	stream-pointer-position now calls sheet-pointer-position clim/interactive-protocol.lisp	Make stream point to input-editor clim/menus.lisp			initial default-text-margin to NIL clim/output-protocol.lisp	added scrolled-pane-line-scroll-amount method clim/pixmap-streams.lisp clim/ptypes2.lisp clim/recording-protocol.lisp clim/surround-output.lisp	Fixed :oval stuff clim/text-recording.lisp	Checked for ink changing in recompute-contents-ok clim/tracking-pointer.lisp	Call sheet-pointer-position climtoys/booch.lisp		Cool new features climtoys/ib.lisp		Cool new features climtoys/sysdcl.lisp		Added booch.lisp to sysdcl misc/dev-load-1.lisp		Added fake-load-system stuff silica/db-button.lisp		removed macro with-radio-box silica/db-layout.lisp		Messed with the client-overridability 				since the climgg.fasl did not work silica/db-scroll.lisp		Fixed cpl and added 				horizontal-line-scroll-amount etc 				Added code to redraw the input-buffer silica/event.lisp		Made dispatch-event methods update the 				pointer and pointer-exit method 				invalidate the pointer silica/gadgets.lisp		Added with-radio-box silica/graphics.lisp silica/scroll-pane.lisp		changed cpl sys/defsystem.lisp		Added fake-load-system test/test-clim.lisp		Added select-file test test/test-driver.lisp		Fixed to handle activities tk/macros.lisp			Support for signed-arrays tk/xlib.lisp			x,y coordinates are signed tk/xm-funs.lisp			added XmSelectionBoxGetChild tk-silica/ol-gadgets.lisp	Line scrolling support tk-silica/xm-gadgets.lisp	Line scrolling support tk-silica/xt-g

--- a/Makefile.generic
+++ b/Makefile.generic
@@ -1,4 +1,4 @@
-# $fiHeader: Makefile.generic,v 1.8 93/04/08 13:17:13 colin Exp $
+# $fiHeader: Makefile.generic,v 1.10 93/04/16 09:26:15 layer Exp $
 #
 #  Makefile.generic for CLIM 2.0
 #
@@ -277,3 +277,5 @@ ol-composer : ol-dcl
 	cd /usr/composer2 ; make CL=$(CL) rebuild-c2
 
 
+lsxmfasls:
+	@ls -s $(MOTIF-OBJS) | sort -nr
