--- a/Makefile.defs
+++ b/Makefile.defs
@@ -129,12 +129,10 @@ OPENLOOK_OBJS= $(GENERIC_PUBLIC_OBJS) $(OL_PUBLIC_OBJS) $(OL_LICENSED_OBJS)
 
 CLIMOBJS=$(PUBLIC_OBJS) $(XM_LICENSED_OBJS) $(OL_LICENSED_OBJS)
 
-INSTALLED_CLIMOBJS=$(PUBLIC_OBJS) $(XM_LICENSED_OBJS) $(OL_LICENSED_OBJS)
+INSTALLED_CLIMOBJS = $(PUBLIC_OBJS) $(XM_LICENSED_OBJS) $(OL_LICENSED_OBJS)
 
-CLIM_FASLS_TO_MAKE = makeclimxmfasls makeclimolfasls
-
-# These are linked into the distribution
-# `pwd`/clim-olit_d.o \ `pwd`/clim-olit.o \
+CLIM_OLFASLS_TO_MAKE = makeclimolfasls
+CLIM_FASLS_TO_MAKE = makeclimxmfasls $(CLIM_OLFASLS_TO_MAKE)
 
 #FCLIMOBJS= `pwd`/clim-motif_d.o `pwd`/clim-motif.o \
 #	    `pwd`/stub-xt.o `pwd`/stub-x.o \
