silica/framem.lisp		make (find-frame-manager) not make a port tk/make-classes.lisp		fixed metaclass of rect and un-named-obj and added fixup-class-entry-points tk/meta-tk.lisp			Added describe-object for xt-class tk/ol-init.lisp			Added reinitializations for svr4 tk/xm-init.lisp			Added reinitializations for svr4 tk/widget.lisp			Fixed typo in error message.

--- a/Makefile.defs
+++ b/Makefile.defs
@@ -3,7 +3,7 @@
 #  Makefile.defs for CLIM 2.0
 #
 
-CL	= /net/vapor/scm2/4.2.beta/src/dcl
+CL	= /net/hyper/qa/4.2.beta2.0/temp-images/sol2_bin/lisp
 PWD	= /usr/tech/cer/stuff/clim-2.0
 DUMP-CL	= $(CL)
 CLOPTS	= -qq
