--- a/Makefile.svr4
+++ b/Makefile.svr4
@@ -1,4 +1,4 @@
-# $fiHeader: $
+# $fiHeader: Makefile.svr4,v 1.2.2.2 1993/05/11 23:56:38 cer Exp $
 
 include Makefile.defs
 
@@ -38,7 +38,7 @@ OLCOPYLIB=not-used-xxxxx
 OLXLIBS=/usr/openwin/lib/libXt.a /usr/openwin/lib/libX11.a
 LIBXOL=/usr/openwin/lib/libXol.a
 LIBXOL_d=$(LIBXOL)
-CL = /usr/fi/dcl-4.2.beta2.0
+CL = /scm3/4.2.beta2.0-sunos5/src/dcl
 PWD = .
 
 include Makefile.generic
